# combust

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
combust/: Cargo.toml
combust-db/: Cargo.toml
combust-db/src/: config.rs  design.rs  gitignore.rs  lib.rs  lock.rs  migration.rs  milestone.rs  record.rs  revision.rs  task.rs
combust/src/: design_edit.rs  lib.rs  main.rs
combust/src/cli/: mod.rs
combust/src/git/: mod.rs
combust/src/issues/: mod.rs
combust/src/runner/: clean.rs  fix.rs  merge.rs  mod.rs  reconcile.rs  review.rs  run.rs  status.rs  task_test.rs  tests.rs  verify.rs
contrib/: Makefile.tmux  README.md
contrib/taskwarrior-tui/: combust-edit.py  combust-edit.sh  combust-run.py  combust-run.sh  combust-show.py  combust-status.py  combust-status.sh
src/: highlight.rs  lib.rs  notify.rs
src/cli/: mod.rs
src/config/: gitignore.rs  mod.rs
src/design/: edit.rs  milestone.rs  mod.rs  record.rs
src/git/: mod.rs
src/issues/: gitea.rs  github.rs  mod.rs
src/lock/: mod.rs
src/runner/: clean.rs  document.rs  fix.rs  merge.rs  mod.rs  reconcile.rs  review.rs  run.rs  status.rs  task_test.rs  tests.rs  verify.rs
