[package]
name = "combust"
version = "0.1.1"
edition = "2021"
description = "AI-driven local pull request workflow where Claude is the only contributor"
license = "AGPL-3.0-only"
repository = "https://github.com/erikh/combust"

[lib]
name = "combust"
path = "src/lib.rs"

[[bin]]
name = "combust"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = "0.19"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
urlencoding = "2"
ratatui = "0.29"
crossterm = "0.28"
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
glob = "0.3"
regex = "1"
which = "7"
syntect = "5"
tempfile = "3"
futures = "0.3"
async-trait = "0.1"
