[package]
name = "combust-db"
version = "0.1.1"
edition = "2021"
description = "Filesystem management library for the .combust/ directory"
license = "AGPL-3.0-only"
repository = "https://github.com/erikh/combust"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
glob = "0.3"
regex = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
